--- a/css/1.css
+++ b/css/1.css
@@ -1,3 +1,6 @@
 @charset "utf-8";
 /* CSS Document */
 html{background-image: url(../images/登录1.png);background-repeat: no-repeat;background-color: #F4F4F4;}
+.htmlnav{width: 100%;height: 150px;background-image: url(../images/导航0.png);position: fixed;bottom: -65px;background-repeat: no-repeat;background-size: contain;z-index: 99;display: block;}
+.htmlnav ul li{width: 20%;float: left;list-style: none;display: list-item;margin-top: 8%;text-align: center;}
+.htmlnav ul li p{color: rgba(157,157,157,1.00);margin-top: 4px;}
